Hide stats panel contents when panel is close Avoids visible scroll bar on closed panel

--- a/mrburns/main/static/css/stats-panel.less
+++ b/mrburns/main/static/css/stats-panel.less
@@ -23,6 +23,23 @@
     padding: 40px 40px 40px 200px;
     clear: left;
     overflow: scroll;
+    // don't show scroll bar when stats panel is closed
+    overflow: hidden;
+}
+
+.stats-panel-contents > div {
+    opacity: 0;
+    .transition(all .1s ease-in-out);
+}
+
+.stats-panel-open {
+    .stats-panel-contents {
+        overflow: scroll;
+        >div {
+            opacity: 1;
+            .transition(all .1s ease-in-out);
+        }
+    }
 }
 
 .stats-panel-nav {
